--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,16 @@
     transform: rotate(360deg);
   }
 }
+
+
+/* Styling for Create new task form */
+#newTaskForm{
+  width:50%;
+  padding:20px;
+  background-color: rgb(80, 100, 255);  
+  border-radius: 10px;
+}
+
+body{
+  background-color: rgb(82, 82, 82);  
+}
