--- a/src/App.css
+++ b/src/App.css
@@ -42,10 +42,18 @@
 #newTaskForm{
   width:50%;
   padding:20px;
+  /* center */
+  margin:auto;  
   background-color: rgb(80, 100, 255);  
   border-radius: 10px;
 }
 
+#taskList{
+  margin:auto;
+  align-items:center;
+  width:50%;
+}
+
 body{
-  background-color: rgb(82, 82, 82);  
+  background-color: rgb(202, 202, 202);  
 }
